# mitwa.ai

./: pyproject.toml
docs/dev/: api
docs/planning/: chatgpt planning thoughts  generating personalities with gpt4  gpt4 extract personalities  the actual plan
docs/source/: bounty  mitwa website
mitwa/: __main__.py  cli.py  db.py  fns0.py  models.py  user.py  utils.py  web.py
